--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "canvas-confetti": "^1.5.1",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
